RESOLVED FIXED13009
REGRESSION (r20042): Console spews "CGContextGetType: invalid context" non-stop on web site
https://bugs.webkit.org/show_bug.cgi?id=13009
Summary REGRESSION (r20042): Console spews "CGContextGetType: invalid context" non-st...
David Kilzer (:ddkilzer)
Reported 2007-03-07 23:17:49 PST
Summary: The following message spews non-stop to the console when the URL (http://tf1.lci.fr/) is loaded: CGContextGetType: invalid context This is a fairly recent regression (within the last 24 hours). Steps to reproduce: 1. Open WebKit debug build. 2. Access URL: http://tf1.lci.fr/ 3. Wait for page to load. Expected results: No "CGContextGetType: invalid context" messages should be printed to the console. Actual results: The "CGContextGetType: invalid context" messages are printed to the console non-stop until the page is closed. Regression: This wasn't happening with debug builds less than 24 hours ago.
Attachments
Checks for null ptr before calling WKCGContextIsBitmapContext. (1.97 KB, patch)
2007-03-08 14:45 PST, Bruce Q. Hammond
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2007-03-07 23:20:22 PST
Note that the URL is from Bug 12980.
Stephanie Lewis
Comment 2 2007-03-07 23:38:41 PST
David Kilzer (:ddkilzer)
Comment 3 2007-03-07 23:51:09 PST
Of course, I can't reproduce it now. Probably a particular ad was being displayed. If anyone sees this again, please save a webarchive of the page.
David Kilzer (:ddkilzer)
Comment 4 2007-03-08 00:05:17 PST
(In reply to comment #3) > Of course, I can't reproduce it now. Probably a particular ad was being > displayed. I was missing a step in the steps to reproduce: 1. Open WebKit debug build. 2. Access URL: http://tf1.lci.fr/ 3. Wait for page to load. 4. Hide Safari. As soon as Safari is hidden, the message starts spewing to the console and never stops until the browser window is closed.
David Kilzer (:ddkilzer)
Comment 5 2007-03-08 00:19:30 PST
This is a regression from r20042 which was the fix for Bug 12515.
David Kilzer (:ddkilzer)
Comment 6 2007-03-08 00:59:12 PST
I'm also seeing these console messages sporadically (on this URL, for example: http://www.flickr.com/search/?q=cute+kittens&s=int): Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0xbd Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0xcb Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0x35 Not a JPEG file: starts with 0x7b 0x35 I'm not sure if this is caused by r20042 or not, though.
David Kilzer (:ddkilzer)
Comment 7 2007-03-08 01:33:18 PST
(In reply to comment #6) > I'm also seeing these console messages sporadically (on this URL, for example: > http://www.flickr.com/search/?q=cute+kittens&s=int): > > Not a JPEG file: starts with 0x7b 0x35 > [...] > > I'm not sure if this is caused by r20042 or not, though. This appears to have been a different issue. Please ignore it.
David Kilzer (:ddkilzer)
Comment 8 2007-03-08 01:35:04 PST
(In reply to comment #7) > This appears to have been a different issue. Please ignore it. And is fixed as of r20057.
Matt Lilek
Comment 9 2007-03-08 14:03:14 PST
(In reply to comment #4) > > As soon as Safari is hidden, the message starts spewing to the console and > never stops until the browser window is closed. > The website http://weplayanything.com spews this before anything is even rendered, without having to hide Safari.
Bruce Q. Hammond
Comment 10 2007-03-08 14:45:56 PST
Created attachment 13549 [details] Checks for null ptr before calling WKCGContextIsBitmapContext. A fairly trivial (low-risk) fix for this issue
Darin Adler
Comment 11 2007-03-08 14:47:08 PST
Comment on attachment 13549 [details] Checks for null ptr before calling WKCGContextIsBitmapContext. r=me Do you know why there's a null context?
Mark Rowe (bdash)
Comment 12 2007-03-08 19:15:53 PST
Landed in r20077.
Note You need to log in before you can comment on or make changes to this bug.