2007-03-08  Bruce Q Hammond  <bruceq@apple.om>

Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=13009
        Console spews "CGContextGetType: invalid context" non-stop on web site

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        (-[WebBaseNetscapePluginView restorePortState:]):


Canonical link: https://commits.webkit.org/16886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20077 268f45cc-cd09-0410-ab3c-d52691b4dbfc